--- a/css/speach.css
+++ b/css/speach.css
@@ -1,5 +1,58 @@
-.body{
+/*.body{
 	font-family: Verdana;
+}
+*/
+@-webkit-keyframes spin {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(360deg);
+    }
+}
+
+@-moz-keyframes spin {
+    from {
+        -moz-transform: rotate(0deg);
+    }
+    to {
+        -moz-transform: rotate(360deg);
+    }
+}
+
+@-ms-keyframes spin {
+    from {
+        -ms-transform: rotate(0deg);
+    }
+    to {
+        -ms-transform: rotate(360deg);
+    }
+}
+
+.spinner{
+    width: 18px;
+    height: 18px;
+
+    -webkit-animation-name: spin;
+    -webkit-animation-duration: 1500ms; /* 40 seconds */
+    -webkit-animation-iteration-count: infinite;
+    -webkit-animation-timing-function: linear;
+
+    -moz-animation-name: spin;
+    -moz-animation-duration: 1500ms; /* 40 seconds */
+    -moz-animation-iteration-count: infinite;
+    -moz-animation-timing-function: linear;
+
+    -ms-animation-name: spin;
+    -ms-animation-duration: 1500ms; /* 40 seconds */
+    -ms-animation-iteration-count: infinite;
+    -ms-animation-timing-function: linear;
+}
+.white{
+    background: url(../img/btn_spinner_18.png)  0 0 no-repeat;
+}
+.blue{
+    background: url(../img/btn_spinner_18_blue.png)  0 0 no-repeat;
 }
 
 .frameEnvio{
