--- a/style/lungo/theme.lungo.css
+++ b/style/lungo/theme.lungo.css
@@ -33,7 +33,9 @@ body {
   font-weight: 200;
   line-height: 1rem;
   font-size: 1rem;
+  /* NEW  
   letter-spacing: -.05em;
+  */
 }
 .theme,
 li.theme,
@@ -63,12 +65,14 @@ section:not(#dialog) > header > span.title{
 }
 /* -------------------------- LAYOUT COLORS -------------------------- */
 section:not(#dialog) > header {
-  height: 3rem;
+  height: 3.2rem;
   background-color: #333;
   color: #F9F9F9;
+  /* new
   -webkit-border-radius: .4rem .4rem 0 0;
   -moz-border-radius: .4rem .4rem 0 0;
   border-radius: .4rem .4rem 0 0;
+  */
   z-index: 2;
 }
 section > footer,
@@ -80,7 +84,7 @@ section nav.groupbar {
 }
 section > article,
 section > [data-control="pull"] {
-  top: 3.4rem!important;
+  top: 3.2rem!important;
   background-color: #f4f5f5;
   color: #555;
   max-width: 100%;
