--- a/css/emo.css
+++ b/css/emo.css
@@ -14,6 +14,11 @@
     background: url(../emo/frame5.png) no-repeat top left;
 }
 
+.sp{
+    padding: 5px;
+    float:left;
+}
+
 .e-001{ background-position: -5px -5px; width: 25px; height: 25px; }
 .e-002{ background-position: -41px -5px; width: 25px; height: 25px; }
 .e-003{ background-position: -76px -5px; width: 25px; height: 25px; }
