--- a/css/speach_blue.css
+++ b/css/speach_blue.css
@@ -80,18 +80,6 @@
     width:100%;
 }
 
-.ipicoder{
-    float:right;
-    width:15px;
-    background-image:url(../img/picoder.png);
-    background-repeat:no-repeat;
-    background-position: 100% 100%;
-    margin-right:-7px;
-    margin-bottom:-10px;
-    margin-top:-13px;
-    min-height:100%;
-    width:100%;
-}
 
 .envio{
 	border-width:1px;	
@@ -139,19 +127,6 @@
     margin-left:-16px;
     margin-bottom:-10px;
     margin-top:-10px;
-    min-height:100%;
-    width:100%;
-}
-
-.ipicoizq{
-    float:left;
-    width:15px;
-    background-image:url(../img/picoizq.png);
-    background-repeat:no-repeat;
-    background-position: 0% 100%;
-    margin-left:-13px;
-    margin-bottom:-10px;
-    margin-top:-13px;
     min-height:100%;
     width:100%;
 }
@@ -218,21 +193,10 @@
     margin-right:20px;
     margin-left:8px;
     float:left;
-
-    border-radius:10px;
-    background: #94c4fe;
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(31%,#94c4fe), color-stop(100%,#d3f6fe));
-    background: -webkit-linear-gradient(top,  #94c4fe 31%,#d3f6fe 100%);
-    background: -moz-linear-gradient(top,  #94c4fe 31%, #d3f6fe 100%);
-    background: -o-linear-gradient(top,  #94c4fe 31%,#d3f6fe 100%);
-    background: -ms-linear-gradient(top,  #94c4fe 31%,#d3f6fe 100%);
-    background: linear-gradient(to bottom,  #94c4fe 31%,#d3f6fe 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#94c4fe', endColorstr='#d3f6fe',GradientType=0 );
-
-    text-shadow: 1px 1px 0px rgba(255,255,255,.5);
-
-    -webkit-box-shadow:  0px 1px 3px 0px rgba(0, 0, 0, .2);
-    box-shadow:  0px 1px 3px 0px rgba(0, 0, 0, .2);
+    border-radius:3px;
+    background: -moz-linear-gradient(#fff, #CCEEFF);
+    background: -webkit-linear-gradient(#fff, #CCEEFF);
+    background: -o-linear-gradient(#fff, #CCEEFF);
 }
 
 .ienvio{
@@ -245,20 +209,11 @@
     margin-left:20px;
     margin-right:8px;
     float:right;
-    border-radius:10px;
-    background: #82d247;
-    background: -moz-linear-gradient(top,  #82d247 0%, #aee850 100%);
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#82d247), color-stop(100%,#aee850));
-    background: -webkit-linear-gradient(top,  #82d247 0%,#aee850 100%);
-    background: -o-linear-gradient(top,  #82d247 0%,#aee850 100%);
-    background: -ms-linear-gradient(top,  #82d247 0%,#aee850 100%);
-    background: linear-gradient(to bottom,  #82d247 0%,#aee850 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#82d247', endColorstr='#aee850',GradientType=0 );
+    border-radius:3px;
 
-    text-shadow: 1px 1px 0px rgba(255,255,255,.5);
-
-    -webkit-box-shadow:  0px 1px 3px 0px rgba(0, 0, 0, .2);
-    box-shadow:  0px 1px 3px 0px rgba(0, 0, 0, .2);
+    background: -moz-linear-gradient(#fff, #b8ffb8);
+    background: -webkit-linear-gradient(#fff, #b8ffb8);
+    background: -o-linear-gradient(#fff, #b8ffb8);
 }
 
 .hora{
@@ -267,11 +222,10 @@
 	font-size: smaller;
 	margin-top:4px;
 	margin-left:3px;
-    padding-right: 3px;
 }
 .ihora{
     float:right;
-    padding-right: 5px;
+    padding-right: 3px;
     color:#888888;
     font-size: smaller;
     margin-top:4px;
