--- a/css/speach.css
+++ b/css/speach.css
@@ -303,7 +303,6 @@
 .chatbackground{
     background:url(../fotos/fondov.png);
     background-size: 100% auto;
-
 }
 
 
@@ -323,4 +322,59 @@
     background-image:url(../img/right.png);
     background-repeat:no-repeat;
     background-position:100% 100%;
+}
+
+.c2link{
+    text-decoration:underline;
+    color: blue;
+}
+
+.formatdate{
+    display: inline-block;
+    background-color: rgba(100,149,237,.7);
+    padding:3px;
+    color:#ffffff;
+    margin-bottom:5px;
+}
+
+.divtag{
+    border-bottom-color:#51af00;
+    border-bottom-width:1px;
+    border-bottom-style:solid;
+    color:#51af00;
+    margin-bottom:10px
+}
+
+.divtagborder{
+    padding-top: 1rem;
+    height: 2rem;
+    font-size: 2rem;
+}
+
+.img-download-out{
+    margin-top:70px;
+    margin-left:70px;
+    margin-right:85px;
+    background-color:rgba(0,0,0,0.5);
+    padding:12px;
+    width:30px;
+    border-radius:45px;
+}
+
+.img-download-in{
+    color:white;
+    border-bottom-width:2px;
+    border-bottom-color:white;
+    border-bottom-style:solid;
+    padding-bottom:5px;
+    padding-left:7px
+}
+
+.img-download-in{
+    color:white;
+    border-bottom-width:2px;
+    border-bottom-color:white;
+    border-bottom-style:solid;
+    padding-bottom:5px;
+    padding-left:7px
 }
