--- a/css/speach_blue.css
+++ b/css/speach_blue.css
@@ -278,3 +278,40 @@
     background-repeat:no-repeat;
     background-position:100% 100%;
 }
+
+.c2link{
+    text-decoration:underline;
+    color: blue;
+}
+
+.formatdate{
+    display: inline-block;
+    background-color:cornflowerblue;
+    padding:3px;
+    color:#ffffff;
+    margin-bottom:5px;
+}
+
+.divtag{
+    border-bottom-color:#00a2e8;
+    border-bottom-width:1px;
+    border-bottom-style:solid;
+    color:#00a2e8;
+    margin-bottom:10px
+}
+
+.divtagborder{
+    padding-top: 1rem;
+    height: 2rem;
+    font-size: 2rem;
+}
+
+.img-download-out{
+    margin-top:70px;
+    margin-left:70px;
+    margin-right:85px;
+    background-color:rgba(0,0,0,0.5);
+    padding:12px;
+    width:30px;
+    border-radius:45px;
+}
